--- a/WorldClock/app/build.gradle
+++ b/WorldClock/app/build.gradle
@@ -8,7 +8,7 @@ android {
         minSdkVersion 26
         targetSdkVersion 29
         versionCode 2
-        versionName "1.0"
+        versionName "0.1a"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
